--- a/style.css
+++ b/style.css
@@ -4,9 +4,21 @@
   --cor-texto: #ffffff;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body{
   background-color: var(--cor-fundo);
   color: var(--cor-texto);
+}
+
+.apresentacao{
+  display flex: ;
+  margin: 18%;
+  align-items: center;
+  justify-content: space-between;
 }
 
 strong{
@@ -14,14 +26,11 @@ strong{
 }
 
 a{
-  color: var(--cor-texto);
-  font-size: 18px;
-  text-decoration: none;
-  background-color: var(--cor-destaque);
-  padding: 12px 40px;
-  margin: 10px;
-  border-radius: 22px;
+
 }
 
+  .foto{
+    height: 490px;
+  }
 
 
