--- a/style.css
+++ b/style.css
@@ -15,22 +15,43 @@ body{
 }
 
 .apresentacao{
-  display flex: ;
-  margin: 18%;
+  display: flex;
+  margin: 10%;
   align-items: center;
   justify-content: space-between;
 }
 
-strong{
+.titulo__destaque{
   color: var(--cor-destaque)
 }
 
-a{
 
+a{
+color: var(--cor-texto);
+  font-size: 18px;
+  text-decoration: none;
+  background-color: var(--cor-destaque);
+  padding: 10px 40px;
+  margin: 10px
+  border-radius: 20px;
 }
 
   .foto{
     height: 490px;
   }
 
+.foto{
+  height: 490px;
+}
 
+. apresentacao__conteudo{
+  width: 615px;
+}
+
+. apresentacao__conteudo__titulo{
+  font-size: 36px;
+}
+
+. apresentacao__conteudo__texto{
+  font-size: 24px;
+}
