--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body{
-  font-family: "montserrat"; 'sans-serit';
+  font-family: "montserrat"; sans-serif;
   height: 100vh;
   box-sizing: border-box;
   background-color: var(--cor-fundo);
@@ -23,7 +23,7 @@ body{
 
 .apresentacao{
   display: flex;
-  margin: 10%;
+  margin: 10% 15%;
   align-items: center;
   justify-content: space-between;
 }
@@ -39,25 +39,33 @@ color: var(--cor-texto);
   text-decoration: none;
   background-color: var(--cor-destaque);
   padding: 10px 40px;
-  margin: 10px
+  margin: 10px;
   border-radius: 20px;
 }
 
-  .foto{
+.foto{
     height: 490px;
   }
 
-}
 
-. apresentacao__conteudo{
+
+.apresentacao__conteudo{
   width: 615px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
-. apresentacao__conteudo__titulo{
+.apresentacao__conteudo__titulo{
   font-size: 36px;
-  font-family: "krona one"; 'sans-sertf';
+  font-family: "krona one", 'sans-sertf';
 }
 
-. apresentacao__conteudo__texto{
+.apresentacao__conteudo__texto{
   font-size: 24px;
+ font-family: "montserrat", sans-serif;
+}
+
+.apresentacao__links{
+  display: flex;
 }
